gb-userscripts.css
/* Common */
.alignCenter {
	text-align: center;
}

.cursorHelp {
	cursor: help;
}

/* Shortcode Toolbar */
#PostAddFormRequesterModule > .Content,
#PostAddFormModule > .Content,
#UnwithholdFormModule > .Content {
	overflow: visible;
}
.markItUpHeader ul .markItUpShortcodes:hover ul {
	display: block !important;
}

.markItUpHeader ul .markItUpShortcodes ul {
	border-top: 3px solid #FFD800;
	box-shadow: 0 2px 2px rgba(0,0,0,0.5);
	display: block;
	margin: 0;
	min-width: 350px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	top: 24px;
	left: 0px;
	z-index: 100;
}

.markItUpHeader ul .markItUpShortcodes li {
	display:block;
	float: left;
	margin: 0;
	padding: 0;
	width: 100%;
}

.markItUpHeader ul .markItUpShortcodes a {
	display: block;
	font-size: 9px;
	height: 10px;
	padding: 3px;
	text-indent: 0;
	text-transform: uppercase;
	width: 100%;
}


/* Optimize markItUp textarea size */
#Wrapper .markItUpEditor {
	box-sizing: border-box;
	height: 215px;
	width: 100%;
}


/* Avatar Tooltip Links */
.AvatarTooltip .ModTools a {
	display: block;
}


/* Admin Pages Layout Improvements */
#Admin_Modlog .ContentColumn[style*="width: 519px"],
#Admin_FlaggedSubmissions .ContentColumn[style*="width: 519px"],
#Admin_WithheldSubmissions .ContentColumn[style*="width: 519px"],
#Feature_Index .ContentColumn[style*="width: 569px"] {
	width: 685px !important;
}

#Admin_Modlog .ContentColumn[style*="width: 150px"],
#Admin_FlaggedSubmissions .ContentColumn[style*="width: 150px"],
#Admin_WithheldSubmissions .ContentColumn[style*="width: 150px"] {
	left: -165px;
	position: absolute;
}

#Feature_Index .ContentColumn[style*="width: 100px"] {
	left: -115px;
	position: absolute;
}

#Feature_Index .Content {
	overflow: hidden;
}

#Feature_Index .PreviewImage {
	width: 180px;
}

#Admin_FlaggedSubmissions table td,
#Admin_WithheldSubmissions table td {
	position: relative;
	padding:  13px 10px;
}

#Admin_FlaggedSubmissions table tr:hover {
	background: rgba(255,255,255,0.05);
}

#Admin_Modlog .LabelState.IsWithheld,
#Admin_FlaggedSubmissions .LabelState.IsWithheld {
	position: absolute;
	top: 12px;
	right: 0;
}

.FlaggedSubmissionTools {
	display: none;
}

tr:hover .FlaggedSubmissionTools {
	display: block;
	float: left;
}

.ModLogTruncateLink {
	display: block;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: 130px;
}

#ModlogListModule td.ActionPerformed .gameIcon {
	height: auto;
	margin: 0 2px;
	width: 16px;
}

.FlagLogTruncateLink {
	float: left;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	max-width: 295px;
	margin-right: 5px;
}
tr:hover .FlagLogTruncateLink {
	float: left;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	max-width: 230px;
	margin-right: 5px;
}

#Admin_WithheldSubmissions .FlagLogTruncateLink {
	max-width: 370px;
}

#Admin_WithheldSubmissions tr:hover .FlagLogTruncateLink {
	max-width: 305px;
}

#Admin_FlaggedSubmissions .submissionCategory,
#Admin_WithheldSubmissions .submissionCategory {
	text-indent: -9999px;
	margin-right: 5px;
}

.FeaturesThreshold {
	background: rgba(0,0,0,0.25);
	font-weight: bold;
	text-align: center;
}

.oldFeature .DateAdded span {
	color: red;
	font-weight: bold;
}

/* Admin Menu */
#AdminMenuWrap {
	padding: 40px 80px 40px 0;
	position: fixed;
	top: 60px;
	left: -175px;
	transition: all 0.1s;
	z-index: 1000;
}

#AdminMenuWrap:hover {
	left: 0;
	position: fixed;
	padding:40px 220px 100px 0;
}

#AdminMenu {
	background: #313942;
	box-shadow: 0 4px 15px rgba(0,0,0,0.2);
	font-size: 12px;
	list-style: none;
	padding: 0;
	text-transform: uppercase;
}

#AdminMenu li {
	border-top: 1px solid #282e36;
	cursor: default;
}

#AdminMenu > li {
	position: relative;
}

#AdminMenu > li:first-child {
	border-top: none;	
}

#AdminMenu li:hover {
	background: #637484;
	color: #fff;
}

#AdminMenu li:hover ul {
	display: block;
}

#AdminMenu a,
#AdminMenu .AdminMenuHeader,
#AdminMenu .SubMenuHeader {
	box-sizing: border-box;
	color: #9299a2;
	text-shadow: 0 0 1px rgba(146,153,162,0.5);
	display: block;
	padding: 5px;
	width: 185px;
}

#AdminMenu a:hover {
	color: #fff;
	text-shadow: 0 0 1px rgba(255,255,255,0.5);
}

#AdminMenu ul {
	background: #313942;
	box-shadow: 0 4px 15px rgba(0,0,0,0.2);
	display: none;
	list-style: none;
	position: absolute;
	top: 0;
	left: 185px;
}

#AdminMenu ul li:first-child {
	border-top: none;
}

#AdminMenu .fa {
	margin-right: 5px;
}

#AdminMenu .AdminMenuHeader {
	border-top: none;
	color: #fff;
	padding-left: 8px;
	text-shadow: 0 0 1px rgba(255,255,255,0.5);
}
#AdminMenu .AdminMenuHeader:hover {
	background: none;
}

#AdminMenu ul .AdminMenuHeader,
#AdminMenu ul .AdminMenuHeader:hover {
	background: #282e36;
	color: #9299a2;
	padding-left: 5px;
}

#AdminMenu .fa-angle-right {
	float: right;
	margin: 2px 0;
}

@media (max-width: 1180px) {
	#AdminMenuWrap {
		padding: 40px 0 40px 0;
	}

	#AdminMenuWrap:hover {
		padding:40px 220px 100px 0;
	}
}

@media (max-width: 1000px) {
	#AdminMenuWrap {
		display: none;
	}
}

/* Withhold Messages UI */
.WithholdMessages {
	background: rgba(0,0,0,0.25);
	margin: 10px auto 15px;
	overflow: hidden;
	padding: 15px;
	text-align: center;
}

.Module>.Content .WithholdMessages h3 {
	border-bottom: none;
	font-size: 16px;
	font-weight: normal;
	text-transform: uppercase;
}

.WithholdMessages h3 a {
	display:inline;
	padding:2px 1px;
	position:relative;
	top:-2px;
}

.gat_withholdMsg_buttons {
	margin: 10px auto 0;
	text-align: center;
	width: 500px;
}

.WithholdMessages li {
	display: inline-block;
	list-style: none;
	margin: 0 5px 5px 0;
}

.WithholdMessages a {
	background : #eee;
	border-radius: 2px;
	color: #333;
	display: block;
	font-size: 10px;
	font-weight: bold;
	padding: 5px 8px;
	text-transform: uppercase;
}
.WithholdMessages a:hover {
	background: #FFD800;
}

.WithholdMessages li a {
	overflow: hidden;
	text-overflow:ellipsis;
	white-space: nowrap;
	width: 75px;
}

#Wrapper .markItUpEditorWithholdMsg {
	box-sizing: border-box;
	height: 215px;
	resize: vertical;
	width: 100% !important;
}

.gat_withholdMsg_settings {
	display: none;
}

.gat_withholdMsg_settings li {
	border-bottom: 1px solid rgba(0,0,0,0.25);
	padding-bottom: 10px;
	margin-bottom: 20px;
	width: 100%;
}

.gat_withholdMsg_settings label {
	display: block;
	font-weight: bold;
	margin: 0;
	text-transform: uppercase;
}

.gat_withholdMsg_settings input {
	display: block;
	margin: 0 auto 5px;
	text-align: center;
	width: 100px;
}

.gat_withholdMsg_settings textarea {
	box-sizing: border-box;
	height: 75px;
	resize: vertical;
	width: 100%;
}

/* Toggleable Filter Module */
.FilterModuleTweaked {
	position: absolute;
	top: 8px;
	right: 8px;
	width: 150px;
}

#Wrapper .FilterModuleTweaked h3 {
	border-bottom: none;
	cursor: pointer;
	margin: 0;
	padding: 5px;
}

#Wrapper .FilterModuleTweaked h3:hover {
	background: #637484;
	color: #fff;
}

.FilterModuleTweaked .fa {
	float: right;
	margin-top: 3px;
	transition: all 250ms;
}

.FilterModuleTweaked.is-toggled .fa {
	-webkit-transform: rotate(90deg);
	   -moz-transform: rotate(90deg);
	    -ms-transform: rotate(90deg);
	     -o-transform: rotate(90deg);
}

#Wrapper .FilterModuleTweaked .Content {
	background: #252525;
	box-shadow: 0 4px 15px rgba(0,0,0,0.2);
	padding: 15px;
	text-align: left;
	position: relative;
	z-index: 100;
}

.FilterModuleTweaked fieldset div {
	display: block;
}

#Wrapper .FilterModuleTweaked legend {
	cursor: default;
}

.FilterModuleTweaked .ToggleFilterInput {
	display: none;
}

#Wrapper .FilterModuleTweaked select,
#Wrapper .FilterModuleTweaked input {
	box-sizing: border-box;
	height: 30px;
	max-width: none;
	width: 100%;
}

